# excel2design

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  REVIEW.md  REVIEW_v2.md  REVIEW_v3.md  SPEC.md  SUBAGENT_LOG.md  TASKS.md  TASKS_v0.5_diagram_plan.md  TASKS_v0.5_plan.md
examples/: sample_module.xlsx  sample_module_iic_top.xlsx  sample_module_iic_top.xlsx.bak  sample_module_sram_wrap.xlsx
excel2design/: __init__.py  cli.py
excel2design/core/: connection.py  exceptions.py  models.py
excel2design/generators/: defines.py  diagram_excalidraw.py  diagram_excalidraw_hierarchy.py  diagram_html.py  diagram_svg.py  diagram_svg_hierarchy.py  diagram_svg_topology.py  hierarchy_layout.py  project_output.py  verilog.py
excel2design/parsers/: default.py  excel.py  hierarchy.py  width.py
excel2design/templates/: diagram_html.j2  partial_always.j2  partial_instance.j2  partial_port.j2  verilog_wrapper.j2
excel2design/utils/: cell.py  clock_colors.py  identifier.py
tests/: test_golden.py  test_smoke.py
tests/e2e/: test_cli.py
tests/fixtures/: axi_crossbar.xlsx  empty_ports.xlsx  hierarchy_2level.xlsx  interface_ports.xlsx  multi_clock.xlsx  uart_rx.xlsx
tests/fixtures/expected/: axi_crossbar.json  empty_ports.json  hierarchy_2level.json  interface_ports.json  multi_clock.json  uart_rx.json
tests/generators/: test_always_reset.py  test_byte_stability.py  test_diagram_width_none.py  test_excalidraw.py  test_html.py  test_svg.py  test_svg_topology.py  test_verilog.py
tests/unit/: test_cell.py  test_connection.py  test_default.py  test_defines.py  test_hierarchy.py  test_hierarchy_diagrams.py  test_hierarchy_layout.py  test_identifier.py  test_models.py  test_parser_excel.py  test_width.py
tools/: gen_baseline.py  gen_fixtures.py  gen_interface_fixture.py  gen_sample.py
